--- a/css/pc_common.css
+++ b/css/pc_common.css
@@ -11,6 +11,7 @@ body{
     width: 100%;
     position:fixed;
     z-index: 9;
+    top:0;
  }
 .h_box{
 	width:1195px; 
@@ -29,13 +30,15 @@ body{
     width: 865px;
 }
 .h_nav_box{
-    padding:0 16px; 
+    padding:0 16px;
+    position:relative;
 }
-.h_nav_box>a{
-    display: block;
+.h_select{
+    display: inline-block;
     height: 100%;
     font:14px/80px '黑体';
     color: #999;
+    width:100%;
 }
 .h_nav_box:hover{  
     background:#246FEE;
@@ -44,12 +47,13 @@ body{
     color:#fff;
 }
 .h_ul{
-    padding:0 16px;
     height:auto;
+    width:100%;
     display:none;
     position:absolute;
+    left:0;
     background:#fff;
-    opacity:0.95;
+    opacity:0.8;
     overflow:hidden;
 }
 .h_ul li{
@@ -59,6 +63,9 @@ body{
 .h_ul li a{
     color: #000;
     font:14px/45px '黑体';
+    display:inline-block;
+    text-align:center;
+    width:100%;
 }
 .h_ul li:hover a{
     color:#246FEE;
@@ -394,7 +401,7 @@ input,textarea {
     padding:5px;
     position: absolute;
     left:-57px;
-    top:-158px;
+    top:-152px;
     -webkit-transition: all 0.3s;
     display: none;
     position: absolute;
@@ -423,51 +430,3 @@ input,textarea {
     display: none;
 }
 /*pc尾部结束*/
-/*nav 导航——satrst*/
-.nav_b{
-    width: 100%;
-    height:100%;
-    box-sizing: border-box;
-    border:1px solid transparent;
-    background: url(../images/index-img/banner-b.jpg) no-repeat center;
-}
-
-.swiper-container {
-    width: 690px;
-    height: 349px;
-    margin:200px auto;
-    background: green;
-}
-
-
-/*nav 导航——ends*/
-
-
-
-/*产品展示 starts*/
-.product_b{
-    width: 1195px;
-    height: 490px;
-    margin: 0 auto;
-    background: pink;
-}
-.product_b_top{
-    width: 1195px;
-    height: 178px;
-}
-.product_b_top h3{
-    font-size: 33px;
-    color: #000000;
-    line-height: 178px;
-}
-.product_b_list{
-    width: 1195px;
-    height: 275px;
-    background: green;
-}
-.product_b_list_node{
-    width: 299px;
-    height: 275px;
-    background: blue;
-}
-/*产品展示 ends*/
