--- a/css/phone_common.css
+++ b/css/phone_common.css
@@ -9,8 +9,6 @@ html,body{
 .h_header{
     background: #1f1f1f;
     height:50px;
-    margin-bottom:50px;
-
 }
 .h_box{
     width:100%;
@@ -279,8 +277,6 @@ html,body{
 	color:#fff;
 }
 
-
-
-
-
-
+.leave_t{
+    display: none;
+}
