杨倩 Signed-off-by: yangyanqian <2081078131@qq.com>

--- a/css/pc_common.css
+++ b/css/pc_common.css
@@ -326,7 +326,7 @@ input,textarea {
 /*pc尾部footer*/
 .footer{
     width:100%;
-    height:288px;
+    /*height:288px;*/
     background: #222;
     position: relative;
 }
