胡雪雪  路由 Signed-off-by: huxuexue <1711356156@qq.com>

--- a/css/pc_common.css
+++ b/css/pc_common.css
@@ -46,6 +46,9 @@ body{
 .h_nav_box:hover .h_select{
     color:#fff;
 }
+.h_language{
+    display:none;
+}
 .h_ul{
     height:auto;
     width:100%;
