--- a/css/x-css/h_gywm.css
+++ b/css/x-css/h_gywm.css
@@ -9,7 +9,6 @@ body{
 }
 .h_box{ 
 	width:1195px;
-	height:100%;
 	margin:0 auto;
 	position:relative;
 }
@@ -113,7 +112,7 @@ body{
     height: 100px;
     text-align:center;
 }
-#h_on,#h_fours{
+#h_on{
 	border-bottom:none;
 }
 #h_ones,#h_twos,#h_threes{
