--- a/css/x-css/about.css
+++ b/css/x-css/about.css
@@ -1,6 +1,97 @@
 body{
 	overflow-x: hidden;
 }
+
+/*pc端头部*/
+body{
+    overflow-x: hidden;
+}
+.h_header{
+    height: 80px;
+    background: #1f1f1f;
+    width: 100%;
+    position:fixed;
+    z-index: 9;
+    top:0;
+ }
+.h_box{
+	width:1195px; 
+	margin:0 auto;
+}
+.h_img{
+    padding:19px 0;
+}	
+.h_img a{
+	display:block;
+}
+/*pc端导航*/
+.h_nav {
+    height: 100%;
+    margin-left: 45px;
+    width: 865px;
+}
+.h_nav_box{
+    /*padding:0 16px;*/
+    position:relative;
+    box-sizing: border-box;
+}
+.h_select{
+    display: inline-block;
+    padding:0 16px;
+    font:14px/80px '黑体';
+    color: #999;
+    width:100%;
+    box-sizing: border-box;
+}
+.h_nav_box:hover .h_select{  
+    background:#246FEE;
+}
+.h_nav_box:hover .h_select{
+    color:#fff;
+}
+.h_language{
+    display:none;
+}
+.h_ul{
+    height:auto;
+    width:100%;
+    display:none;
+    position:absolute;
+    left:0;
+    background:#fff;
+    opacity:0.8;
+    overflow:hidden;
+    z-index:10;
+}
+.h_ul li{
+    line-height: 45px;
+    height: 45px;
+}
+.h_ul li a{
+    color: #000;
+    font:14px/45px '黑体';
+    display:inline-block;
+    text-align:center;
+    width:100%;
+}
+.h_ul li:hover a{
+    color:#246FEE;
+}
+#h_video{
+    color:#246fee;
+}
+.h_tel{
+    height:100%;
+}
+.h_tel a{
+    display: block;
+    padding: 31px 0;
+    box-sizing: border-box;
+}
+/*pc端导航结束*/
+
+/*pc端头部结束*/
+
 /*banner*/
 .h_banner{
 	width:100%;
@@ -68,3 +159,353 @@ body{
 	color:#999999;
 	font:11px/47px 'Microsoft YaHei';
 }
+
+
+
+
+/*pc_saidar-left 开始*/
+.column_b{
+    width: 54px;
+    height: 265px;
+    position: fixed;
+    top:50%;
+    right: 0;
+    margin-top: -132px;
+    z-index: 10;
+}
+.column_b_wx{
+    width: 54px;
+    height: 54px;
+    background: url(../../images/news.png);
+    margin-bottom: 15px;
+    position: relative;
+    display: block;
+}
+.column_b_phone{
+    width: 54px;
+    height: 54px;
+    background: url(../../images/tel_ph.png);
+    margin-bottom: 15px;
+    position: relative;
+    display: block;
+}
+.column_b_search{
+    width: 54px;
+    height: 54px;
+    background: url(../../images/search.png);
+    margin-bottom: 15px;
+    position: relative;
+    display: block;
+}
+.column_b_top{
+    width: 54px;
+    height: 54px;
+    background: url(../../images/top.png);
+    position: relative;
+    display: none;
+}
+.column_b_wx_con{
+    width: 152px;
+    height: 54px;
+    background: url(../../images/news-con.png);
+    margin-bottom: 15px;
+    position: absolute;
+    right: -152px;
+}
+.column_b_wx_con p{
+    padding-left: 54px;
+    line-height: 54px;
+    color: #f3f8ff;
+    font-size: 17px;
+}
+
+.column_b_phone_con{
+    width: 230px;
+    height: 54px;
+    background: url(../../images/icon-b.png);
+    margin-bottom: 15px;
+    position: absolute;
+    right: -230px;
+}
+.column_b_phone_con p{
+    padding-left: 78px;
+    line-height: 54px;
+    color: #f3f8ff;
+    font-size: 20px;
+}
+.column_b_search_con{
+    width: 152px;
+    height: 54px;
+    background: url(../../images/icon-search.png);
+    margin-bottom: 15px;
+    position: absolute;
+    right: -152px;
+}
+.column_b_search_con p{
+    padding-left: 54px;
+    line-height: 54px;
+    color: #f3f8ff;
+    font-size: 17px;
+}
+.column_b_top_con{
+    width: 54px;
+    height: 54px;
+    background: url(../../images/top-show.png);
+    margin-bottom: 15px;
+    position: absolute;
+    right: -54px;
+}
+.column_b_top_con p{
+    padding-left: 54px;
+    line-height: 54px;
+    color: #f3f8ff;
+    font-size: 17px;
+}
+.olumn_b_tel,.online,.icon{
+    display:none;
+}
+/*pc_saidar-left 结束*/
+
+/*pc leave starts*/
+input,textarea {
+    outline: none;
+    border: none;
+}
+/*    leave     */
+.leave_t {
+    width: 240px;
+    position: fixed;
+    left: 1px;
+    bottom: 1px;
+    z-index: 10;
+}
+.leave_t_top {
+    height: 35px;
+    line-height: 35px;
+    font-size: 14px;
+    background-color: #00aef3;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.leave_t_title {
+    float: left;
+    font-size: 14px;
+    color: #fff;
+    margin-left: 12px;
+    line-height: 35px;
+}
+.leave_t_close {
+    display: inline-block;
+    float: right;
+    height: 30px;
+    width: 34px;
+    margin-top: 2px;
+    cursor: pointer;
+    background-image: url(../../images/leave/nodeMin.png);
+    background-repeat: no-repeat;
+}
+.leave_t_open {
+    display: inline-block;
+    float: right;
+    height: 30px;
+    width: 34px;
+    margin-top: 2px;
+    cursor: pointer;
+    background-image: url(../../images/leave/nodeMax.png);
+    background-repeat: no-repeat;
+}
+.leave_t_content {
+    /*padding-left: 11px;*/
+    background-color: #ededed;
+    overflow: hidden;
+}
+.leave_t_con {
+    padding-left: 11px;
+    padding-right:11px;
+}
+.leave_t_con textarea {
+    margin: 12px auto 7px;
+    width: 212px;
+    height: 79px;
+    padding: 0 4px;
+    resize: none;
+    overflow: hidden;
+    border: 1px solid #d5d5d5;
+    background-color: #fff;
+    text-align: left;
+    font-size: 12px;
+}
+.leave_t_name{
+    /*padding-left: 11px;*/
+    /*padding-right: 11px;*/
+    margin: 0px 11px 7px;
+    border: 1px solid #d5d5d5;
+    background-color: #fff;
+}
+.leave_t_name span {
+    width: 35px;
+    height: 30px;
+    display: inline-block;
+    text-align: center;
+    background-color: #fff;
+    vertical-align: top;
+    border-right: 1px solid #fff;
+}
+.leave_t_name input {
+    margin: 0;
+    width: 140px;
+    height: 30px;
+    line-height: 30px;
+    _overflow: hidden;
+    border: none;
+    display: inline-block;
+    font-size: 13.3px;
+}
+.nodeName_t {
+    background-image: url(../../images/leave/user.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+.nodephone_t {
+    background-image: url(../../images/leave/nodephone.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+.nodemail_t {
+    background-image: url(../../images/leave/nodemail.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+.nodelocation {
+    background-image: url(../../images/leave/nodelocation.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+.leave_t_send {
+    height: 35px;
+    width: 90px;
+    line-height: 35px;
+    text-align: center;
+    border-radius: 2px;
+    font-size: 14px;
+    color: #fff;
+    cursor: pointer;
+    background-color: #00aef3;
+    margin: 10px 11px 15px;
+}
+.leave_t .hint{
+    color:#666;
+}
+.leave_t .hide{
+    display: none;
+}
+/*pc leave end*/
+
+
+/*pc尾部footer*/
+.footer{
+    width:100%;
+    height:288px;
+    background: #222;
+    position: relative;
+}
+.footerNav{
+    width:1195px;
+    height:238px;
+    margin:0 auto;
+}
+.footerNav>div{
+    width:14.2%;
+    height: auto;
+    padding-top: 40px;
+    text-align: left;
+    box-sizing: border-box;
+    float: left;
+}
+.footerNav>div>a{
+    display: block;
+    text-align: left;
+    font-size: 14px;
+    color:#fff;
+    margin-bottom: 15px;
+}
+.footerNav>div ul{
+    width:100%;
+}
+.footerNav>div ul li{
+    width:100%;
+    height:20px;
+    line-height: 20px;
+    display: block;
+}
+.footerNav>div ul li a{
+    display: block;
+    color: #999;
+    font-size: 12px;
+}
+.footerNav>div ul li a:hover{
+    color:#fff;
+}
+.footerNav>div p{
+    font-size: 20px;
+    color:#fff;
+    margin-bottom: 20px;
+}
+.Last p i{
+    display: none;
+}
+.Last .share a{
+    display: inline-block;
+    width: 33px!important;
+    height: 33px!important;
+    transition: none;
+}
+.Last .share .WB{
+    margin-right: 20px; 
+    background: url(../../images/icon_share.png) 0px 0px no-repeat;
+}
+.Last .share .WB:hover{
+    background: url(../../images/icon_share.png) 0px -66px no-repeat;
+}
+.Last .share .WX{
+    background: url(../../images/icon_share.png) 0px -33px no-repeat;
+    position: relative;
+}
+.Last .share .WX:hover{
+    background: url(../../images/icon_share.png) 0px -99px no-repeat;
+}
+.Last .share .WXbox{
+    width:135px;
+    height:135px;
+    padding:5px;
+    position: absolute;
+    left:-57px;
+    top:-152px;
+    -webkit-transition: all 0.3s;
+    display: none;
+    position: absolute;
+}
+.Last .share .WXbox img{
+    width:100%;
+}
+.footerBottom{
+    width:100%;
+    height:50px;
+    line-height: 50px;
+    color:#777;
+    font-size: 12px;
+    text-align: center;
+    border-top:1px solid #3e3d3d;
+}
+.footerBottom a{
+    font-size: 12px;
+    color:#777;
+}
+.footerBottom a:hover{
+    color:#fff;
+}
+
+.footerNav>.mask{
+    display: none;
+}
+/*pc尾部结束*/
