--- a/css/x-css/aboutphone.css
+++ b/css/x-css/aboutphone.css
@@ -11,3 +11,280 @@
 .h_bannav,.h_pp{
 	display:none;
 }
+
+
+/*移动端头部*/
+.h_header{
+    background: #1f1f1f;
+    height:50px;
+}
+.h_box{
+    width:100%;
+}
+.h_img{
+    padding:13px 0 14px 15px;
+}
+.h_meeting{
+    width:85px;
+    height:23px;
+}
+.h_tel{
+    display:none;
+}
+.h_pic{
+    width:20px;
+    height:19px;
+    margin:15px 5px 0 5px;
+    cursor:pointer;
+}
+.h_pic p{
+    width:20px;
+    height:2px;
+    background:#fff;
+    cursor:pointer;
+}
+.h_twop{
+    margin:6px 0 7px 0;
+}
+#h_video{
+    color:#c7c2c2;
+}
+/*移动端导航*/
+.h_nav{
+    width:50%;
+    height:100%;
+    background:#1f1f1f;
+    position:fixed;
+    right:-384px;
+    top:50px;
+    color:#eee;
+    float:none;
+}
+.h_nav_box{
+    border-bottom: 1px solid #252525;
+    width: 100%;
+    padding:0;
+}
+.h_nav_box:hover{
+    background:none;
+}
+.h_nav_box>a{
+    height:45px;
+    font:14px/45px '黑体';
+    text-align:right;
+    padding-right:15px;
+    color: #eee;
+    float: right;
+}
+.h_ul{
+    width:100%;
+    background:#292929;
+    opacity:0.95;
+    height:auto;
+    display:none;
+    position:static;
+    overflow:hidden;
+}
+.h_ul li{
+    border-bottom:1px solid #2f2f2f;
+    height:45px;
+    line-height: 45px;
+}
+.h_ul li a{
+    color: #c7c2c2;
+    display: block;
+    height:45px;
+    font:14px/45px '黑体';
+    text-align:right;
+    padding-right:36px;
+}
+.h_ul li:hover a{
+    color:#246FEE;
+}   
+/*移动端翻译*/
+.h_language{
+    width:98px;
+    height:58px;
+    float:right;
+    margin-top:25%;
+    padding-right:15px;
+}
+.h_language p{
+    width:48px;
+    height:36px;
+}
+.h_language p a{
+    width:48px;
+    height:36px;
+    display:block;
+    text-align:center;
+    line-height:36px;
+    color:#fff;
+    border:1px solid #fff;
+}
+.h_language p:first-child a{
+    border-right:none;
+}
+.h_language p:first-child a{
+    background:#fff;
+    color:#222;
+}
+/*移动端头部结束*/
+/*move-sidebar-left -starts*/
+.column_b_wx,.column_b_phone,.column_b_search,.column_b_top{
+        display: none;
+    }
+    .column_b{
+        width: 25%;
+        height:16%;
+        background: #00aef3;
+        position: fixed;
+        top:50%;
+        left: 0;
+        margin-top: -8%;
+        border-radius:5px;
+        z-index: 10;
+    }
+    .icon{
+        display:block;
+        width:20%;
+        height:17%;
+        margin:40% 0 10% 40%;
+    }
+    .online{
+        width:100%;
+        text-align:center;
+        display:block;
+    }
+    .online a{
+        font:16px 'Microsoft YaHei';
+        color:#98defa;
+
+    }
+/*move-sidebar-left-end*/
+/*移动端尾部*/
+.footer{
+	width:100%;
+	height:auto;
+	padding:25px 0;	
+	background: #222;
+}
+.footerNav{
+	width:100%;
+	padding:15px 0;
+	margin:0 auto;
+}
+.footerNav div{
+	display: none;
+}
+.footerNav>.Last{
+	width:100%;
+	height:33px;
+	display: block;
+	padding-bottom: 20px;
+}
+.Last a{
+	display: none;
+}
+.Last p{
+	width:45%;
+	float: left;
+	font-size: 14px;
+	color:#fff;
+	margin-left: 15px;
+}
+.Last p i{
+	display: block;
+    font-size: 10px;
+    color: #777777;
+}
+.Last .share{
+	width:45%;
+	height:33px;
+	float: right;
+	display: block;
+	margin-right: 15px;
+	position: relative;
+}
+.Last .share a{
+	display: inline-block;
+    width: 33px!important;
+    height: 33px!important;
+    transition: none;
+}
+.Last .share .WB{
+	margin-right: 10px; 
+    background: url(../images/icon_share.png) 0px 0px no-repeat;
+}
+.Last .share .WB:hover{
+	background: url(../images/icon_share.png) 0px -66px no-repeat;
+}
+.Last .share .WX{
+    background: url(../images/icon_share.png) 0px -33px no-repeat;
+    position: relative;
+}
+.Last .share .WX:hover{
+	background: url(../images/icon_share.png) 0px -99px no-repeat;
+}
+.Last .share .WXbox{
+	position: absolute;
+	left:-46px;
+	top:-146px;
+	display: none;
+}
+.Last .share img{
+	width:125px;
+	height:137px;
+}
+.footerNav .mask{
+	width: 220px;
+    height: 220px;
+    background: #fff;
+    position: fixed;
+    left: 50%;
+    margin-left: -110px;
+    top: 50%;
+    margin-top: -110px;
+    text-align: center;
+    padding: 10px;
+    box-shadow: 0 0 5px #000;
+    border-radius: 3px;
+    z-index: 99;
+    display: none;
+}
+.footerNav .mask span img{
+	position: absolute;
+    right: 0;
+    top: 0;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+}
+.footerNav .mask h3 {
+    font-size: 16px;
+    color: #000;
+}
+.footerNav .mask>img{
+	width:75%;
+	height:auto;
+	max-width: 100%;
+}
+.footerNav .mask p {
+    font-size: 10px;
+    color: #333;
+}
+.footerBottom{
+	font-size: 13px;
+    color: #777777;
+    text-align: center;
+	border-top:1px solid #3e3d3d;
+	padding-top:20px;
+}
+.footerBottom a{
+	color:#fff;
+}
+
+.leave_t{
+    display: none;
+}
