--- a/css/pc_common.css
+++ b/css/pc_common.css
@@ -25,7 +25,7 @@ body{
 }
 /*pc端导航*/
 .h_nav {
-    height: 100%;
+    height: 80px;
     margin-left: 45px;
     width: 865px;
 }
@@ -35,7 +35,7 @@ body{
 }
 .h_select{
     display: inline-block;
-    height: 100%;
+    /*height: 100%;*/
     font:14px/80px '黑体';
     color: #999;
     width:100%;
