--- a/css/phone_common.css
+++ b/css/phone_common.css
@@ -8,7 +8,11 @@ html,body{
 /*移动端头部*/
 .h_header{
     background: #1f1f1f;
-    height:50px;
+    height:50px; 
+    width: 100%;
+    position:fixed;
+    z-index: 9;
+    top:0;
 }
 .h_box{
     width:100%;
@@ -51,6 +55,7 @@ html,body{
     top:50px;
     color:#eee;
     float:none;
+    z-index:9;
 }
 .h_nav_box{
     border-bottom: 1px solid #252525;
