--- a/css/index_b_phone.css
+++ b/css/index_b_phone.css
@@ -316,14 +316,14 @@ body{
 }
 .works_b_phone_con_node{
     width: 50%;
-    height: 200px;
+ /*   height: 200px;*/
     float: left;
     box-sizing: border-box;
     padding: 0 0 0 20px;
 }
 .works_b_phone_con_node img{
-    width: 90%;
-    height: 87px;
+   max-width: 90%;
+    height: auto;
 }
 .works_b_phone_con_node a h3{
     font-size: 12px;
