--- a/css/x-css/h_gsgg.css
+++ b/css/x-css/h_gsgg.css
@@ -25,6 +25,10 @@
     text-align: center;
     margin: 0 10px;
 }
+/*.h_tab li:first-child a{
+    background:#2f3133;
+    color:#fff;
+}*/
 .h_titlems{
     position: relative;
     text-align: center;
