--- a/css/x-css/h_qyfc.css
+++ b/css/x-css/h_qyfc.css
@@ -170,13 +170,15 @@
     height: 100%;
 }*/
 .h_alert{
-    position:absolute;
+    position:fixed;
     top:0;
     left:0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
     background:#000;
     /*opacity:0.9;*/
-    width:100%;
-    height:100%;
+   
     z-index:10;
     display:none;
 }
