--- a/css/x-css/about.css
+++ b/css/x-css/about.css
@@ -219,7 +219,10 @@ body{
 .column_b_wx_con p{
     padding-left: 54px;
     line-height: 54px;
-    color: #f3f8ff;
+}
+
+.column_b_wx_con p a{
+    color: #fff;
     font-size: 17px;
 }
 
