--- a/css/x-css/h_gsgg.css
+++ b/css/x-css/h_gsgg.css
@@ -25,10 +25,7 @@
     text-align: center;
     margin: 0 10px;
 }
-/*.h_tab li:first-child a{
-    background:#2f3133;
-    color:#fff;
-}*/
+
 .h_titlems{
     position: relative;
     text-align: center;
@@ -50,10 +47,6 @@
 }
 .h_ulBox{
     width: 100%;
-    border-bottom: 1px solid #eeeeee;
-    margin-bottom: 100px;
-   /* height:750px;
-    overflow:hidden;*/
 }
 .h_page2{
     display:none;
@@ -64,7 +57,6 @@
 .h_li-list {
     height: 125px;
     width: 100%;
-    /* background: #246fee; */
     color: #666666;
     padding: 30px;
     border-bottom: 1px solid #eeeeee;
@@ -110,6 +102,7 @@
 .h_num{
 	width:100%; 
 	text-align:center; 
+    margin-top:50px;
 }
 .h_ul5{
     max-width: 100%;
